--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -11,6 +11,13 @@
     "mainTitle": "TODO",
     "whoWeAre": {
       "title": "TODO",
+      "subtitle": "TODO",
+      "punctuality": "Punctuality",
+      "security": "Security",
+      "partnership": "Partnership"
+    },
+    "localization": {
+      "title": "TODO",
       "subtitle": "TODO"
     },
     "more": {
