--- a/public/locales/pl/common.json
+++ b/public/locales/pl/common.json
@@ -24,5 +24,22 @@
       "title": "Więcej o nas",
       "subtitle": "Integracja pracowników jest dla nas kluczowym elementem budującym dobre relacje. Nasz zespół nie tylko pracuje razem, ale także spędza ze sobą czas rekreacyjny. Posiłki, granie na konsoli czy też niezapomniane wypady to tylko część atrakcji w Orion Express. Organizujemy dla pracowników niezapomniane wydarzenia, które pozwalają oderwać się od rzeczywistości."
     }
+  },
+
+  "career": {
+    "mainTitle": "Kariera",
+    "subtitle": {
+      "firstHalf": "Praca w Grand",
+      "secondHalf": "Transport Logistics"
+    },
+    "text": "Praca w Grand Transport Logistics to dla Ciebie idealna szansa na poszerzenie oferty transportowej lub rozwinięcie swoich umiejętności spedycyjnych. Współpraca w projektach, atrakcyjny system wynagrodzenia czy też stałe poszerzanie swoich umiejętności to tylko kilka cech, które charakteryzują naszą działalność.",
+    "work": {
+      "title": "Dostępne Stanowiska",
+      "carrier": "Przewoźnik",
+      "driver": "Kierowca",
+      "dispatcher": "Dyspozytor",
+      "forwarder": "Spedytor",
+      "administration": "Administracja"
+    }
   }
 }
