--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -24,5 +24,12 @@
       "title": "TODO",
       "subtitle": "TODO"
     }
+  },
+  "contactForm": {
+    "title": "Kontaktformular"
+  },
+  "contact": {
+    "title": "Skontaktuj się",
+    "subtitle": "Kontaktieren Sie die Spezialisten von Grand Transport Logistics, um die Einzelheiten der Zusammenarbeit zu besprechen. Wir beantworten Ihre Fragen und zerstreuen alle Zweifel bezüglich des Logistiktransports."
   }
 }
