--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -24,5 +24,12 @@
       "title": "TODO",
       "subtitle": "TODO"
     }
+  },
+  "contactForm": {
+    "title": "Contact form"
+  },
+  "contact": {
+    "title": "Contact us",
+    "subtitle": "Contact Grand Transport Logistics specialists to discuss the details of cooperation. We will answer your questions and dispel any doubts regarding logistics transport."
   }
 }
