added blank contact page

--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -6,6 +6,7 @@
     "chooseLang": "Deutsch"
   },
   "gallery": "Galerie",
+  "documents": "Unterlagen",
   "aboutUs": {
     "mainTitle": "Über uns",
     "whoWeAre": {
@@ -44,7 +45,7 @@
     "title": "Kontaktformular"
   },
   "contact": {
-    "title": "Skontaktuj się",
+    "title": "Kontaktieren",
     "subtitle": "Kontaktieren Sie die Spezialisten von Grand Transport Logistics, um die Einzelheiten der Zusammenarbeit zu besprechen. Wir beantworten Ihre Fragen und zerstreuen alle Zweifel bezüglich des Logistiktransports."
   }
 }
