--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -6,7 +6,7 @@
     "chooseLang": "English"
   },
   "gallery": "Gallery",
-
+  "documents": "Documents",
   "aboutUs": {
     "mainTitle": "About us",
     "whoWeAre": {
@@ -22,7 +22,7 @@
     },
     "more": {
       "title": "More about us",
-      "subtitle": "Employee integration is a key element for us in building good relationships. Our team not only works together, but also spends recreational time together. Meals, playing on the console and unforgettable trips are just some of the attractions at Orion Express. We organize unforgettable events for employees that allow them to escape from reality."
+      "subtitle": "Die Integration der Mitarbeiter ist für uns ein Schlüsselelement beim Aufbau guter Beziehungen. Unser Team arbeitet nicht nur zusammen, sondern verbringt auch gemeinsam Freizeit. Mahlzeiten, Spielen an der Konsole und unvergessliche Ausflüge sind nur einige der Attraktionen bei Grand Transport Logistics. Wir organisieren unvergessliche Events für Mitarbeiter, die es ihnen ermöglichen, der Realität zu entfliehen."
     }
   },
 
