--- a/public/locales/pl/common.json
+++ b/public/locales/pl/common.json
@@ -6,7 +6,7 @@
     "chooseLang": "Polski"
   },
   "gallery": "Galeria",
-
+  "documents": "Dokumenty",
   "aboutUs": {
     "mainTitle": "O nas",
     "whoWeAre": {
@@ -22,7 +22,7 @@
     },
     "more": {
       "title": "Więcej o nas",
-      "subtitle": "Integracja pracowników jest dla nas kluczowym elementem budującym dobre relacje. Nasz zespół nie tylko pracuje razem, ale także spędza ze sobą czas rekreacyjny. Posiłki, granie na konsoli czy też niezapomniane wypady to tylko część atrakcji w Orion Express. Organizujemy dla pracowników niezapomniane wydarzenia, które pozwalają oderwać się od rzeczywistości."
+      "subtitle": "Integracja pracowników jest dla nas kluczowym elementem budującym dobre relacje. Nasz zespół nie tylko pracuje razem, ale także spędza ze sobą czas rekreacyjny. Posiłki, granie na konsoli czy też niezapomniane wypady to tylko część atrakcji w Grand Transport Logistics. Organizujemy dla pracowników niezapomniane wydarzenia, które pozwalają oderwać się od rzeczywistości."
     }
   },
   "career": {
