Finished contact page

--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -46,6 +46,8 @@
   },
   "contact": {
     "title": "Kontaktieren",
-    "subtitle": "Kontaktieren Sie die Spezialisten von Grand Transport Logistics, um die Einzelheiten der Zusammenarbeit zu besprechen. Wir beantworten Ihre Fragen und zerstreuen alle Zweifel bezüglich des Logistiktransports."
+    "subtitle": "Kontaktieren Sie die Spezialisten von Grand Transport Logistics, um die Einzelheiten der Zusammenarbeit zu besprechen. Wir beantworten Ihre Fragen und zerstreuen alle Zweifel bezüglich des Logistiktransports.",
+    "teamTitle1": "Benötigen Sie Kontakt zu einer bestimmten Person aus unserem Team?",
+    "teamTitle2": "Werfen Sie einen Blick auf die gesamte Crew von Grand Transport Logistics"
   }
 }
