--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -47,6 +47,8 @@
   },
   "contact": {
     "title": "Contact us",
-    "subtitle": "Contact Grand Transport Logistics specialists to discuss the details of cooperation. We will answer your questions and dispel any doubts regarding logistics transport."
+    "subtitle": "Contact Grand Transport Logistics specialists to discuss the details of cooperation. We will answer your questions and dispel any doubts regarding logistics transport.",
+    "teamTitle1": "Do you need contact with a specific person from our team?",
+    "teamTitle2": "Take a look at the full Grand Transport Logistics crew"
   }
 }
