--- a/public/locales/pl/common.json
+++ b/public/locales/pl/common.json
@@ -46,6 +46,8 @@
   },
   "contact": {
     "title": "Skontaktuj się",
-    "subtitle": "Skontaktuj się z specjalistami Grand Transport Logistics w celu omówienia szczegółów współpracy. Odpowiemy na Państwa pytania i rozwiejemy wszelkie wątpliwości dotyczące transportu logistycznego."
+    "subtitle": "Skontaktuj się z specjalistami Grand Transport Logistics w celu omówienia szczegółów współpracy. Odpowiemy na Państwa pytania i rozwiejemy wszelkie wątpliwości dotyczące transportu logistycznego.",
+    "teamTitle1": "Potrzebujesz kontaktu z konkretną osobą z naszego teamu?",
+    "teamTitle2": "Zerknij na pełną załogę Grand Transport Logistics"
   }
 }
