--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -18,7 +18,8 @@
     },
     "localization": {
       "title": "Our modern office",
-      "subtitle": "We are located in the very center of Bydgoszcz. Our company's office is equipped with top-shelf modern and ergonomic equipment, ensuring comfort and efficiency of work."
+      "subtitle": "We are located in the very center of Bydgoszcz. Our company's office is equipped with top-shelf modern and ergonomic equipment, ensuring comfort and efficiency of work.",
+      "seeOffice": "See office"
     },
     "more": {
       "title": "More about us",
