--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -1,9 +1,6 @@
 {
   "mainBanner": {
-    "title": "Modern logistics solutions supported by many years of experience.",
-    "subtitle": "Transport coordination and planning at the highest level. Find out more about our activities.",
-    "aboutUs": "About us",
-    "contactUs": "Contact us"
+    "title": "Modern logistics solutions supported by many years of experience."
   },
   "meetUs": {
     "title": "Meet us",
