--- a/public/locales/pl/home.json
+++ b/public/locales/pl/home.json
@@ -1,20 +1,17 @@
 {
   "mainBanner": {
-    "title": "Nowoczesne rozwiązania logistyczne poparte wieloletnim doświadczeniem.",
-    "subtitle": "Koordynacja i planowaniem transportu na najwyższym poziomie. Dowiedz się więcej o naszej działalności.",
-    "aboutUs": "O nas",
-    "contactUs": "Skontaktuj się z nami"
+    "title": "Nowoczesne rozwiązania logistyczne poparte wieloletnim doświadczeniem."
   },
   "meetUs": {
     "title": "Poznaj nas",
-    "subtitle": "Grand Transport Logistics to zespół specjalistów zajmujących się spedycją oraz transportem drogowym na terenie całej Europy. Podczas codziennej pracy wykorzystujemy najnowsze rozwiązania i technologie, a każdy przewóz dopasowany jest do indywidualnych potrzeb naszych klientów. Szeroka flota własnych pojazdów oraz możliwość świadczeń usług spedycyjnych sprawia, że żaden transport nie jest nam straszny!",
+    "subtitle": "Grand Transport Logistics to zespół specjalistów zajmujących się spedycją oraz transportem drogowym na terenie całej Europy. Wszystkie zdjęcia są prawdziwe, zrobione i wybrane przez nas a następnie przerobione sztuczną inteligencją. Podczas codziennej pracy wykorzystujemy najnowsze rozwiązania i technologie. Posiadamy szeroką flotę własnych pojazdów, a każdy przewóz dopasowany jest do indywidualnych potrzeb naszych klientów.",
     "button": "Więcej o nas"
   },
   "ourOffer": {
     "mainTitle": "Czym się zajmujemy",
     "offerOne": {
       "title": "Transport",
-      "description": "Obszerna oraz nowoczesna flota pojazdów pozwala nam spełniać najwyższe standardy jakości i bezpieczeństwa. Działamy zarówno na rynku krajowym, jak i międzynarodowym, oferując szeroki zakres rozwiązań transportowych dostosowanych do potrzeb naszych klientów."
+      "description": "Obszerna oraz nowoczesna flota pojazdów pozwala nam spełniać najwyższe standardy jakości i bezpieczeństwa. Działamy zarówno na rynku krajowym, jak i międzynarodowym."
     },
     "offerTwo": {
       "title": "Spedycja",
