--- a/public/locales/pl/forms.json
+++ b/public/locales/pl/forms.json
@@ -3,5 +3,8 @@
   "email": "Email",
   "topic": "Temat",
   "message": "Napisz wiadomość",
+  "writeAboutYourself": "Napisz kilka słów o sobie",
+  "phone": "Numer telefonu",
+  "uploadCV": "Wgraj CV (PDF)",
   "submit": "Wyślij"
 }
