--- a/public/locales/de/forms.json
+++ b/public/locales/de/forms.json
@@ -1,7 +1,10 @@
 {
   "name": "Vor- und Nachname",
   "email": "Email",
-  "topic": "",
+  "topic": "Thema",
   "message": "Nachricht schreiben",
+  "writeAboutYourself": "Schreiben Sie ein paar Worte über sich",
+  "phone": "Telefonnummer",
+  "uploadCV": "Lebenslauf hochladen (PDF)",
   "submit": "Senden"
 }
