--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -40,7 +40,8 @@
       "driver": "Driver",
       "dispatcher": "Dispatcher",
       "forwarder": "Forwarder",
-      "administration": "Administration"
+      "administration": "Administration",
+      "internationalForwarder": "International Forwarder"
     },
     "form": {
       "title": "Your contact details",
