--- a/public/locales/pl/forms.json
+++ b/public/locales/pl/forms.json
@@ -6,5 +6,7 @@
   "writeAboutYourself": "Napisz kilka słów o sobie",
   "phone": "Numer telefonu",
   "uploadCV": "Wgraj CV (PDF)",
-  "submit": "Wyślij"
+  "submit": "Wyślij",
+  "acceptOur": "Zaakceptuj nasz",
+  "privacyPolicy": "regulamin"
 }
