--- a/public/locales/en/forms.json
+++ b/public/locales/en/forms.json
@@ -6,5 +6,7 @@
   "writeAboutYourself": "Write a few words about yourself",
   "phone": "Phone number",
   "uploadCV": "Upload CV (PDF)",
-  "submit": "Submit"
+  "submit": "Submit",
+  "acceptOur": "I accept the",
+  "privacyPolicy": "Privacy Policy"
 }
