--- a/public/locales/pl/home.json
+++ b/public/locales/pl/home.json
@@ -15,7 +15,7 @@
     },
     "offerTwo": {
       "title": "Spedycja",
-      "description": "Jesteśmy wiodącą firmą specjalizującą się w kompleksowej organizacji przewozów drogowych na terenie całej Europy.  Bez względu na rodzaj ładunku, nasza firma skutecznie obsługuje zarówno wysyłki drobnicowe, jak i transport FTL."
+      "description": "Jako wiodący ekspert w organizacji przewozów drogowych na terenie całej Europy, oferujemy kompleksowe rozwiązania transportowe dostosowane do indywidualnych potrzeb naszych klientów. Specjalizujemy się zarówno w wysyłkach drobnicowych, jak i pełno pojazdowym transporcie FTL."
     }
   }
 }
