--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -37,19 +37,19 @@
     "mainTitle": "About us",
     "whoWeAre": {
       "title": "Who are we?",
-      "subtitle": "Grand Transport Logistics is a group of specialists offering modern logistics solutions throughout Europe. During our work, we make sure to maintain positive relationships both with our clients and within the company. This translates directly into work results and significant, stable growth of the company. In our company, we place great emphasis on innovation and continuous progress. We support ourselves with modern tools and use artificial intelligence to constantly improve the quality of our services.",
+      "subtitle": "Grand Transport Logistics is a group of specialists offering modern logistics solutions throughout Europe. During our work we take care to keep positive relations with our customers, as well as inside our company. It impacts directly into results at work and significant stable development.",
       "punctuality": "Punctuality",
       "security": "Security",
       "partnership": "Partnership"
     },
     "localization": {
       "title": "Our modern office",
-      "subtitle": "We are located in the very center of Bydgoszcz. Our company's office is equipped with top-shelf modern and ergonomic equipment, ensuring comfort and efficiency of work.",
+      "subtitle": "We are in the city center of Bydgoszcz. The office of our company is equipped with modern and ergonomic equipment, ensuring comfort and efficiency of work.",
       "seeOffice": "See office"
     },
     "more": {
       "title": "More about us",
-      "subtitle": "Die Integration der Mitarbeiter ist für uns ein Schlüsselelement beim Aufbau guter Beziehungen. Unser Team arbeitet nicht nur zusammen, sondern verbringt auch gemeinsam Freizeit. Mahlzeiten, Spielen an der Konsole und unvergessliche Ausflüge sind nur einige der Attraktionen bei Grand Transport Logistics. Wir organisieren unvergessliche Events für Mitarbeiter, die es ihnen ermöglichen, der Realität zu entfliehen."
+      "subtitle": "Employee integration is a key element for us to build good relationships. Our team not only works together but also spends free time with each other. Thanks to our common interests, our time passes quickly and enjoyable."
     }
   },
 
@@ -59,7 +59,7 @@
       "firstHalf": "Work at Grand",
       "secondHalf": "Transport Logistics"
     },
-    "text": "Working at Grand Transport Logistics is an ideal opportunity for you to expand your transport offer or develop your forwarding skills. Cooperation in projects, attractive remuneration system and constant development of skills are just a few features that characterize our activities.",
+    "text": "Working at Grand Transport Logistics is an ideal opportunity for you to expand your transport offers or develop your freight forwarding skills. Cooperation in projects, an attractive remuneration system or constant expansion of your skills are just a few features that stand out our business.",
     "work": {
       "title": "Positions available",
       "carrier": "Carrier",
@@ -94,8 +94,8 @@
   },
   "contact": {
     "title": "Contact us",
-    "subtitle": "Contact Grand Transport Logistics specialists to discuss the details of cooperation. We will answer your questions and dispel any doubts regarding logistics transport.",
-    "teamTitle1": "Do you need contact with a specific person from our team?",
-    "teamTitle2": "Take a look at the full Grand Transport Logistics crew"
+    "subtitle": "Contact the specialists of Grand Transport Logistics to discuss the details of cooperation. We will answer all your questions and clear your doubts about logistics transportation.",
+    "teamTitle1": "Need to get in contact with a person from our team?",
+    "teamTitle2": "Look at the full Grand Transport Logistics team."
   }
 }
