--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -4,7 +4,7 @@
   },
   "meetUs": {
     "title": "Meet us",
-    "subtitle": "Grand Transport Logistics is a team of specialists dealing with forwarding and road transport throughout Europe. During our daily work, we use the latest solutions and technologies, and each transport is tailored to the individual needs of our customers. A wide fleet of our own vehicles and the possibility of providing forwarding services mean that no transport is a problem for us!",
+    "subtitle": "Grand Transport Logistics is a team of specialists in freight forwarding and road transport throughout Europe. All photos are real, taken and selected by us and then processed with AI. During our daily work we use the modern solutions and technologies. We have a big fleet of our own vehicles, and each transport is tailored to the individual needs of our customers.",
     "button": "Read more"
   },
   "ourOffer": {
