--- a/public/locales/pl/common.json
+++ b/public/locales/pl/common.json
@@ -38,7 +38,7 @@
     "mainTitle": "O nas",
     "whoWeAre": {
       "title": "Kim jesteśmy?",
-      "subtitle": "Grand Transport Logistics to grupa specjalistów oferujących nowoczesne rozwiązania logistyczne na terenie całej Europy. Podczas pracy dbamy o utrzymywanie pozytywnych stosunków z naszymi klientami, jak i wewnątrz firmy. Przekłada się to bezpośrednio na wyniki w pracy i znaczny stabilny rozwój. ",
+      "subtitle": "Grand Transport Logistics to grupa specjalistów oferujących nowoczesne rozwiązania logistyczne na terenie całej Europy. Podczas pracy dbamy o utrzymywanie pozytywnych stosunków z naszymi klientami, jak i wewnątrz firmy. Przekłada się to bezpośrednio na wyniki w pracy i znaczny stabilny rozwój.",
       "punctuality": "Terminowość",
       "security": "Bezpieczeństwo",
       "partnership": "Partnerstwo"
@@ -94,7 +94,7 @@
   },
   "contact": {
     "title": "Skontaktuj się",
-    "subtitle": "Skontaktuj się z specjalistami Grand Transport Logistics w celu omówienia szczegółów współpracy. Odpowiemy na Państwa pytania i rozwiejemy wszelkie wątpliwości dotyczące transportu logistycznego.",
+    "subtitle": "Skontaktuj się ze specjalistami Grand Transport Logistics w celu omówienia szczegółów współpracy. Odpowiemy na wszystkie pytania i rozwiejemy wątpliwości dotyczące transportu logistycznego.",
     "teamTitle1": "Potrzebujesz kontaktu z konkretną osobą z naszego teamu?",
     "teamTitle2": "Zerknij na pełną załogę Grand Transport Logistics"
   }
