add toastify, fix gallery, add email templates

--- a/public/locales/de/forms.json
+++ b/public/locales/de/forms.json
@@ -8,5 +8,6 @@
   "uploadCV": "Lebenslauf hochladen (PDF)",
   "submit": "Senden",
   "acceptOur": "Ich akzeptiere die",
-  "privacyPolicy": "Datenschutzbestimmungen"
+  "privacyPolicy": "Datenschutzbestimmungen",
+  "messageSent": "Nachricht wurde gesendet!"
 }
