--- a/public/locales/de/home.json
+++ b/public/locales/de/home.json
@@ -1,6 +1,6 @@
 {
   "mainBanner": {
-    "title": "Moderne Logistiklösungen\nUnterstützt durch langjährige Erfahrung.",
+    "title": "Moderne Logistiklösungen\nUnterstützt durch langjährige Erfahrung."
   },
   "meetUs": {
     "title": "Treffen Sie uns",
