--- a/public/locales/en/forms.json
+++ b/public/locales/en/forms.json
@@ -8,5 +8,6 @@
   "uploadCV": "Upload CV (PDF)",
   "submit": "Submit",
   "acceptOur": "I accept the",
-  "privacyPolicy": "Privacy Policy"
+  "privacyPolicy": "Privacy Policy",
+  "messageSent": "Message has been sent!"
 }
