--- a/public/locales/pl/forms.json
+++ b/public/locales/pl/forms.json
@@ -8,5 +8,6 @@
   "uploadCV": "Wgraj CV (PDF)",
   "submit": "Wyślij",
   "acceptOur": "Zaakceptuj nasz",
-  "privacyPolicy": "regulamin"
+  "privacyPolicy": "regulamin",
+  "messageSent": "Wiadomość została wysłana!"
 }
